# openstream

./: .gitignore  Cargo.toml  README.md  asd.json  build.sh  config.default.toml  config.example.toml  docs.sh  float_min_decimal.js  nginx.conf  openapi-generator.js  openapi.json  openapi.ts  openstream-1.config.cjs  openstream-2.config.cjs  openstream-front.mjs  openstream.config.cjs  openstream.pm2.config.cjs  openstream.sample.json  openstream.sample.jsonc  openstream.sample.toml  openstream.toml  package-lock.json  package.json  pre-commit  pre-commit-2wozjn3qs2u.mjs  pre-commit-61fmn7b8bk.mjs  pre-commit-7q5hafql8mo.mjs  pre-commit-8nxlihxlw4h.mjs  pre-commit-lslram2en7.mjs  pre-commit-o390zgg605o.mjs  pre-commit-r00umhn11fn.mjs  pre-commit-wml4cpe5txm.mjs  pre-commit-z8v6auxjb1.mjs  pre-commit.mjs  serve-docs.sh  source_client.mjs  stream_clients.mjs
.cargo/: config.toml
.github/workflows/: cargo-build-release.yml  cargo-build.yml  cargo-integration-tests.yml  cargo-test.yml  cargo-unit-test.yml  cargo-unit-tests.yml  front-admin-build.yml  front-admin-typecheck.yml  front-app-build.yml  front-app-typecheck.yml  front-server-build.yml  front-server-unit-tests.yml  front-studio-build.yml  front-studio-typecheck.yml  main.yml  release.yml
apps/app/: package-lock.json  package.json
audio/: partial-server.mjs
db/: EmailVerificationCode.ts  IncrementStationAudioFileOrder.ts
definitions/db/: BaseEvent.ts  PublicUser.ts
defs/: AccountLimit.ts  AccountLimits.ts  AdminPublicAccount.ts  AdminPublicStation.ts  ApiKey.ts  CountryCode.ts  DateTime.ts  Device.schema.json  Device.ts  EmptyStruct.ts  LangCode.ts  Paged.ts  PublicAccount.ts  PublicAdmin.ts  PublicPaymentMethod.ts  PublicPaymentMethodKind.ts  PublicStation.ts  StationFrequency.ts  StationFrequencyKind.ts  StationLimit.ts  StationLimits.ts  TimezoneDateTime.ts  UserAgent.ts  UserPublicAccount.ts  UserPublicStation.ts  constants.ts
defs-patches/: AccessToken.ts  AccessToken.ts.back  AudioUploadOperation.ts  Connection.ts  Event.ts  MediaSession.ts.back  PaymentMethod.ts  PlayHistoryItem.ts  SentEmail.ts.back
defs/analytics/: Analytics.ts  AnalyticsByBrowser.ts  AnalyticsByCountry.ts  AnalyticsByDay.ts  AnalyticsByMonth.ts  AnalyticsByOs.ts  AnalyticsByStation.ts  AnalyticsDate.ts  AnalyticsItem.ts  AnalyticsQueryKind.ts  AnalyticsStation.ts  YearMonth.ts  YearMonthDay.ts
defs/api/: ApiKey.ts  InvitationAccount.ts  InvitationAdminSender.ts  InvitationReceiver.ts  InvitationUserSender.ts  Me.ts  PublicInvitation.ts
defs/app-analytics/: Analytics.ts  AnalyticsItem.ts  AnalyticsQueryKind.ts  AnalyticsStation.ts  AppKindVersion.ts  YearMonthDayHour.ts
defs/db/: AccessTokenGeneratedBy.ts  AccessTokenScope.ts  Account.ts  AccountInvitationState.ts  Admin.ts  AdminPublicUser.ts  AudioChunk.ts  AudioFile.ts  AudioMetadata.ts  AudioUploadOperation.ts  AudioUploadOperationState.ts  BaseAccessToken.ts  BaseAudioUploadOperation.ts  BaseConnection.ts  BaseEvent.ts  BasePlayHistoryItem.ts  Config.ts  ConfigLimits.ts  ConnectionState.ts  DbWritableTest.ts  Deployment.ts  DeploymentState.ts  Document.ts  EmailVerificationCode.ts  EventVariant.ts  MediaSession.ts  MediaSessionBase.ts  MediaSessionKind.ts  MediaSessionNowPlaying.ts  MediaSessionState.ts  Metadata.ts  OwnerDeploymentInfo.ts  PaymentMethod.ts  PaymentMethodKind.ts  Plan.ts  PlanLimits.ts  PlayHistoryItem.ts  PlayHistoryItemKind.ts  Probe.ts  ProbeResult.ts  (+30 more)
defs/error/: PublicError.ts  PublicErrorCode.ts  PublicErrorPayload.schema.json  PublicErrorPayload.ts
defs/ops/: AccountPatch.ts  AccountPatchLimits.ts  AdminPatch.ts  StationPatch.ts  StationPatchLimits.ts
defs/qs/: PaginationQs.ts  VisibilityKind.ts  VisibilityQs.ts
defs/stream-connection-stats/: Stats.ts  StatsItem.ts  TimedItem.ts
front/: package-lock.json  package.json
front/admin/: .eslintrc.cjs  .prettierrc  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1688519975015.mjs
front/app/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1685675677940.mjs
front/embed/: package-lock.json  package.json
front/server/: .gitignore  config.sample.toml  jest.config.cjs  openstream-front-1.config.cjs  openstream-front-2.config.cjs  openstream-front.js  openstream-front.pm2.config.cjs  openstream-front.sample.json  openstream-front.sample.jsonc  openstream-front.sample.toml  openstream-front.toml  package-lock.json  package.json  pm2.config.cjs  pm2.config.js  tsconfig.json  tsconfig.tsbuildinfo
front/share/: package-lock.json  package.json  tsconfig.json
git/hooks/: .gitignore  pre-commit
internal-scripts/: README.md
internal-scripts/client/: Cargo.toml
internal-scripts/client/src/: main.rs
internal-scripts/create-test-accounts/: Cargo.toml
internal-scripts/create-test-accounts/src/: main.rs
internal-scripts/ffstress/: Cargo.toml
internal-scripts/hls-logger/: Cargo.toml
internal-scripts/migrations/: Cargo.toml
internal-scripts/migrations/src/: migration_add_access_token_media_key.rs  migration_add_audio_file_order.rs
internal-scripts/mixed/: Cargo.toml
internal-scripts/mixed/src/: main.rs
internal-scripts/producer/: Cargo.toml
mailer-static/: config.toml  pm2.config.cjs
openapi/: redoc.html
patches/: bson.README.md
patches/bson/: Cargo.toml
rs/config/constants/: Cargo.toml
rs/config/constants/src/: lib.rs
rs/internal-scripts/client/: Cargo.toml
rs/internal-scripts/client/src/: main.rs
rs/internal-scripts/create-random-stream-connections/: Cargo.toml
rs/internal-scripts/create-random-stream-connections/src/: main.rs
rs/internal-scripts/hls-logger/: Cargo.toml
rs/internal-scripts/hls-logger/src/: main.rs
rs/internal-scripts/mixed/: Cargo.toml
rs/internal-scripts/mixed/samples/: aac.aac
rs/internal-scripts/producer/: Cargo.toml
rs/internal-scripts/producer/src/: main.rs
rs/internal-scripts/purge-deleted-items/: Cargo.toml  main.rs
scripts/: package-lock.json  package.json  tsconfig.json
source-client/: Cargo.toml
(+1014 files in other folders)
