
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test ]
panic = "abort"

[profile.bench]
panic = "abort"

[profile.doc]
panic = "abort"

[workspace]
resolver = "2"

members = [
    "rs/bin/openstream",
    "rs/config/constants",
    "rs/packages/openapi",
    "rs/packages/ip-counter",
    "rs/packages/macros",
    "rs/packages/macros-build",
    "rs/packages/burst",
    "rs/packages/media",
    "rs/packages/ip",
    "rs/packages/config",
    "rs/packages/stream",
    "rs/packages/source-alt",
    "rs/packages/stream",
    "rs/packages/assets",
    "rs/packages/router",
    "rs/packages/upload",
    "rs/packages/api",
    "rs/packages/api2",
    "rs/packages/mp3",
    "rs/packages/http",
    "rs/packages/channels",
    "rs/packages/db",
    "rs/packages/validate",
    "rs/packages/user-agent",
    "rs/packages/spsc",
    "rs/packages/shutdown",
    "rs/packages/drop-tracer",
    "rs/packages/owo-colors",
    "rs/packages/prex",
    "rs/packages/uid",
    "rs/packages/crypt",
    "rs/packages/ffmpeg",
    "rs/packages/serde-util",
    "rs/packages/stream-util",
    "rs/packages/logger",
    "rs/packages/env_logger",
    "rs/packages/lang-util",
    "rs/packages/test-macros",
    "rs/packages/test-util",
    "rs/packages/proxy-protocol",
    "rs/packages/geoip",
    "rs/packages/lang",
    "rs/packages/mailer",
    "rs/packages/payments",
    "rs/packages/modify",
    "rs/packages/modify_derive",
    "rs/packages/metre",
    "rs/packages/metre-macros",
]

[patch.crates-io]
ts-rs = { path = "./rs/patches/ts-rs/ts-rs" }