[package]
name = "mixed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
ffmpeg = { version = "0.1.0", path = "../../packages/ffmpeg" }
hyper = { version = "0.14.20", features = ["full"] }
prex = { version = "0.1.0", path = "../../packages/prex" }
tokio = { version = "1.21.2", features = ["full"] }
