[package]
name = "constants"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "3.1.0"
macros = { version = "0.1.0", path = "../../packages/macros" }
regex = "1.10.3"
static_init = "1.0.3"
