[package]
name = "constants"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = { workspace = true }
macros = { version = "0.1.0", path = "../../packages/macros" }
regex = { workspace = true }
static_init = { workspace = true }
