[package]
name = "create-random-stream-connections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
config = { version = "0.1.0", path = "../../packages/config" }
db = { version = "0.1.0", path = "../../packages/db" }
futures = "0.3.25"
futures-util = "0.3.25"
geoip = { version = "0.1.0", path = "../../packages/geoip" }
log = "0.4.17"
logger = { version = "0.1.0", path = "../../packages/logger" }
mongodb = "2.4.0"
owo-colors = { version = "3.5.0", path = "../../packages/owo-colors" }
rand = "0.8.5"
serde-util = { version = "0.1.0", path = "../../packages/serde-util" }
thiserror = "1.0.38"
time = "0.3.20"
tokio = { version = "1.27.0", features = ["full"] }
user-agent = { version = "0.1.0", path = "../../packages/user-agent" }
