[package]
name = "hls-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["full"] }
log = "0.4.17"
logger = { version = "0.1.0", path = "../../packages/logger" }
prex = { version = "0.1.0", path = "../../packages/prex" }
tokio = { version = "1.29.0", features = ["full"] }
