[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { version = "0.1.0", path = "../../packages/api" }
async-stream = "0.3.3"
bytes = "1.2.1"
constants = { version = "0.1.0", path = "../../config/constants" }
db = { version = "0.1.0", path = "../../packages/db" }
dotenv = "0.15.0"
ffmpeg = { version = "0.1.0", path = "../../packages/ffmpeg" }
futures = "0.1.14"
hyper = { version = "0.14.20", features = ["full"] }
multiqueue = "0.3.2"
reqwest = { version = "0.11.14", features = ["stream"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
stream-util = { version = "0.1.0", path = "../../packages/stream-util" }
thiserror = "1.0.38"
tokio = { version = "1.27.0", features = ["full"] }

[features]
